# LSP-css

./: .gitattributes  .gitignore  LICENSE  LSP-css.sublime-commands  LSP-css.sublime-settings  Main.sublime-menu  README.md  data_types.py  dependencies.json  package-lock.json  package.json  plugin.py  pyproject.toml  sublime-package.json  types.py
language-server/: .gitignore  README.md  compile-language-server.sh  package-lock.json  package.json
plugin/: __init__.py  client.py  data_types.py
utils/: resources.py
vscode-css/: README.md  compile-vscode-css-languageserver.sh  package-lock.json  package.json
